--- a/DMRG_2D/DMRG_2D.ipynb
+++ b/DMRG_2D/DMRG_2D.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 1,
    "id": "1f3a40ca",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 2,
    "id": "0be19fe2",
    "metadata": {},
    "outputs": [
@@ -30,7 +30,7 @@
        "['open', 'periodic']"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 3,
    "id": "d08e862d",
    "metadata": {},
    "outputs": [
@@ -60,7 +60,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<__main__.CustomFermiHubbardModel object at 0x7b80e356bf80>\n"
+      "<__main__.CustomFermiHubbardModel object at 0x71e47e503b30>\n"
      ]
     }
    ],
@@ -105,19 +105,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "id": "d9ac53f5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "109.32511806488037\n",
-      "Ground state energy: -0.7595259113781182\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "\n",
@@ -168,10 +159,10 @@
     "    return E0\n",
     "\n",
     "# Example usage\n",
-    "Lx, Ly = 4, 3\n",
-    "U = 4.0\n",
+    "Lx, Ly = 8, 4\n",
+    "U = 10\n",
     "tx = -1.0\n",
-    "ty = -1.0*np.exp(1j*np.pi/2)\n",
+    "ty = -1.0\n",
     "mu = 0.0\n",
     "chi_max = 1000\n",
     "sweeps = 40\n",
@@ -183,6 +174,18 @@
     "\n",
     "print(str(time.time()-st_time))\n",
     "print(\"Ground state energy:\", ground_state_energy)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de89097b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Time scaling for Ly = 4\n",
+    "L_vals = np.array([4, 6, 8])\n",
+    "time_scaling = np.array([303.77138781547546, 809.2236495018005, ])"
    ]
   },
   {
