Updated with the cluster scripts (slurm)

--- a/DMRG_1D/DMRG_HK_Charge_gap.ipynb
+++ b/DMRG_1D/DMRG_HK_Charge_gap.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 2,
    "id": "1295054a",
    "metadata": {},
    "outputs": [],
@@ -65,15 +65,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 4,
    "id": "cac7cc7a",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/jeb/anaconda3/lib/python3.11/site-packages/tenpy/models/hubbard.py:175: UserWarning: Invalid type for key \"t\". Expected one of Real, list, ndarray. Got complex128.\n",
+      "  t = model_params.get('t', 1., 'real_or_array')\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ground State Energy at Half Filling: -2.4630240638293848\n"
+      "Ground State Energy at Half Filling: -2.463024063829383\n"
      ]
     }
    ],
@@ -89,7 +97,7 @@
     "\n",
     "\n",
     "ground_state_energy = run_dmrg_half_filling(L, U, t, mu, chi_max, sweeps, charge=1)\n",
-    "print(\"Ground State Energy at Half Filling:\", ground_state_energy[0]/L)"
+    "print(\"Ground State Energy at Half Filling:\", ground_state_energy/L)"
    ]
   },
   {
@@ -481,7 +489,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
