Corr func code, updated OHK DMRG in 1D

--- a/DMRG_2D/DMRG_2D.ipynb
+++ b/DMRG_2D/DMRG_2D.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "1f3a40ca",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "0be19fe2",
    "metadata": {},
    "outputs": [
@@ -30,7 +30,7 @@
        "['open', 'periodic']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "d08e862d",
    "metadata": {},
    "outputs": [
@@ -60,7 +60,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<__main__.CustomFermiHubbardModel object at 0x7550fcbcfda0>\n"
+      "<__main__.CustomFermiHubbardModel object at 0x7386ebdbf470>\n"
      ]
     }
    ],
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "id": "d9ac53f5",
    "metadata": {},
    "outputs": [
@@ -113,8 +113,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.400859832763672\n",
-      "Ground state energy: -0.3581515762430956\n"
+      "3.1801066398620605\n",
+      "Ground state energy: -0.744279585132164\n"
      ]
     }
    ],
@@ -169,12 +169,12 @@
     "\n",
     "# Example usage\n",
     "Lx, Ly = 2, 4\n",
-    "U = 10\n",
+    "U = 4\n",
     "tx = -1.0\n",
     "ty = -1.0\n",
     "mu = 0.0\n",
-    "chi_max = 3000\n",
-    "sweeps = 40\n",
+    "chi_max = 2000\n",
+    "sweeps = 60\n",
     "charge = 0\n",
     "\n",
     "st_time = time.time()\n",
