Updated MPS indexing to ladder in 2D

--- a/DMRG_2D/DMRG_2D.ipynb
+++ b/DMRG_2D/DMRG_2D.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "d08e862d",
    "metadata": {},
    "outputs": [
@@ -60,7 +60,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<__main__.CustomFermiHubbardModel object at 0x7386ebdbf470>\n"
+      "<__main__.CustomFermiHubbardModel object at 0x72ff31b25e50>\n"
      ]
     }
    ],
@@ -78,11 +78,11 @@
     "    def init_terms(self, params):\n",
     "        for u1, u2, dx in self.lat.pairs['nearest_neighbors']:\n",
     "            if dx[0] != 0:  # Hopping in the x-direction\n",
-    "                self.add_coupling(self.tx, u1, 'Cdu', u2, 'Cu', dx, plus_hc=True)\n",
-    "                self.add_coupling(self.tx, u1, 'Cdd', u2, 'Cd', dx, plus_hc=True)\n",
+    "                self.add_coupling(-self.tx, u1, 'Cdu', u2, 'Cu', dx, plus_hc=True)\n",
+    "                self.add_coupling(-self.tx, u1, 'Cdd', u2, 'Cd', dx, plus_hc=True)\n",
     "            if dx[1] != 0:  # Hopping in the y-direction\n",
-    "                self.add_coupling(self.ty, u1, 'Cdu', u2, 'Cu', dx, plus_hc=True)\n",
-    "                self.add_coupling(self.ty, u1, 'Cdd', u2, 'Cd', dx, plus_hc=True)\n",
+    "                self.add_coupling(-self.ty, u1, 'Cdu', u2, 'Cu', dx, plus_hc=True)\n",
+    "                self.add_coupling(-self.ty, u1, 'Cdd', u2, 'Cd', dx, plus_hc=True)\n",
     "        for u in range(len(self.lat.unit_cell)):\n",
     "            self.add_onsite(self.U, u, 'NuNd')\n",
     "            self.add_onsite(self.mu, u, 'Ntot')\n",
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "d9ac53f5",
    "metadata": {},
    "outputs": [
@@ -113,8 +113,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.1801066398620605\n",
-      "Ground state energy: -0.744279585132164\n"
+      "0.6183679103851318\n",
+      "Ground state energy: -1.2504298553379927\n"
      ]
     }
    ],
@@ -158,7 +158,7 @@
     "        'mixer': True,\n",
     "        'trunc_params': {\n",
     "            'chi_max': chi_max,\n",
-    "            'svd_min': 1.e-5\n",
+    "            'svd_min': 1.e-7\n",
     "        },\n",
     "        'max_sweeps': sweeps,\n",
     "    }\n",
@@ -168,10 +168,10 @@
     "    return E0\n",
     "\n",
     "# Example usage\n",
-    "Lx, Ly = 2, 4\n",
+    "Lx, Ly = 2, 2\n",
     "U = 4\n",
-    "tx = -1.0\n",
-    "ty = -1.0\n",
+    "tx = 1.0\n",
+    "ty = 1.0\n",
     "mu = 0.0\n",
     "chi_max = 2000\n",
     "sweeps = 60\n",
@@ -299,8 +299,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "a8d570c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 2\n",
+      "3.7624311447143555\n",
+      "[[-0.87413816]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "U = 6.0  \n",
+    "t = 1.0\n",
+    "mu = 0  # Chemical potential (often set to 0 for simplicity at half filling)\n",
+    "chi_max = 2000  # Maximum bond dimension\n",
+    "sweeps = 40  # Number of DMRG sweeps\n",
+    "k_num = 10\n",
+    "\n",
+    "Lx_list = [2]\n",
+    "Ly_list = [2]\n",
+    "GS_list = np.zeros(shape=(len(Lx_list), len(Ly_list)))\n",
+    "\n",
+    "time_list = np.zeros(shape=(len(Lx_list), len(Ly_list)))\n",
+    "for i, Lx in enumerate(Lx_list):\n",
+    "    for j, Ly in enumerate(Ly_list):\n",
+    "        print(Lx, Ly)\n",
+    "        st_time_ind = time.time()\n",
+    "        energy_arr = np.zeros(k_num)\n",
+    "        for ky in range(-int(k_num/2), int(k_num/2)):\n",
+    "            ty = t*np.exp(1j*ky/k_num*np.pi/Ly)\n",
+    "            tx = t\n",
+    "            ground_state_energy = run_dmrg_2d(Lx, Ly, U, tx, ty, mu, chi_max, sweeps)/Ly\n",
+    "            energy_arr[ky+int(k_num/2)] = ground_state_energy\n",
+    "        GS_list[i,j] = energy_arr.mean()/Lx\n",
+    "        time_list[i,j] = time.time() - st_time_ind\n",
+    "        print(time_list[i,j])\n",
+    "\n",
+    "print(GS_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0fcdaab5-7953-412c-9eef-8633ef064621",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "GS_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ac0b184-49ab-4341-a8ad-8bd5e18b764a",
    "metadata": {},
    "outputs": [],
    "source": []
